# guievalkit

./: .flake8  .geminiignore  .gitignore  Dockerfile  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt  run.py  run.sh
.github/workflows/: lint.yml
config/: __init__.py  config_utils.py  dataset_info.json  model_info.json  model_paths.json
data/: README.md  process_ac.py  process_aitz.py  process_odyssey.py
data/utils/: format_converter.py  preprocessing.py
docs/: development.md  results.md
guieval/: __init__.py  config.py
guieval/eval/: __init__.py  compute_metric.py  convert_output.py  dataset.py  evaluator.py
guieval/main/: __init__.py  compute.py  config.py  data.py  deploy.py  processor.py  step_task.py  utils.py
guieval/models/: __init__.py  agentcpm_gui.py  execute.py  glm_4_1v.py  glm_4_5v.py  gui_owl.py  magicgui.py  mimo_vl.py  qwen2_5_vl.py  qwen3_vl.py  run_agentcpm_gui.py  run_glm4p1v.py  run_glm4p5v.py  run_gui_owl.py  run_magicgui.py  run_mimo_vl.py  run_qwen2p5_vl.py  run_uitars_1.py  run_uitars_1p5.py  run_uivenus_navi.py  ui_tars.py  ui_tars_1_5.py  ui_venus_navi.py
guieval/utils/: __init__.py  action_metric.py  action_space.py  action_type.py  action_utils.py  config_utils.py  global_tokenizer.py  utils.py
profiler/: task_sampler.py  utils.py  visualize_action.py
profiler/cluster/: cluster_result.py  entropy.py  merge_sampled_results.py
profiler/main/: __init__.py  (+1 more)
utils/: __init__.py  log_ansi_template.j2  logging_utils.py  time_utils.py  utils.py
vllm_serve/: __init__.py  deploy.py  deployed.py  setup.py
(+55 files in other folders)
