[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "guievalkit"
version = "0.1.0"
description = "A Unified Toolkit for Evaluating GUI Agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Pengzhi Gao"}
]
dependencies = [
    "torch>=2.0.0",
    "vllm>=0.2.0",
    "pillow",
    "numpy",
    "tqdm",
    "jsonargparse",
    "jinja2",
]

[project.urls]
"Homepage" = "https://github.com/gaopengzhi/guievalkit"
"Bug Tracker" = "https://github.com/gaopengzhi/guievalkit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["guieval*", "profiler*", "vllm_serve*", "utils*"]
